# amaranth-stubs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
amaranth-stubs/: __init__.pyi  _utils.pyi
amaranth-stubs/hdl/: __init__.pyi  _ast.pyi  _dsl.pyi  _ir.pyi  _mem.pyi  _nir.pyi  _time.pyi  _xfrm.pyi
amaranth-stubs/lib/: coding.pyi  data.pyi  enum.pyi  fifo.pyi  io.pyi  memory.pyi  wiring.pyi
amaranth-stubs/sim/: _async.pyi  _base.pyi  _pycoro.pyi  core.pyi  pysim.pyi
amaranth_types/: types.py
