[project]
name = "amaranth-stubs"
version = "2024.10.01.dev0"
dependencies = [
    "amaranth @ git+https://github.com/amaranth-lang/amaranth@9bd536bbf96b07720d6e4a8709b30492af8ddd13"
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
    "pyright == 1.1.332"
]

[tool.pyright]
include = ["amaranth-stubs", "amaranth_types"]
