[project]
name = "amaranth-stubs"
version = "2024.10.23.dev0"
dependencies = [
    "amaranth @ git+https://github.com/amaranth-lang/amaranth@5e59189c2b8689a453891e17e378bf73806efdd3"
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
    "pyright == 1.1.332"
]

[tool.pyright]
include = ["amaranth-stubs", "amaranth_types"]
