[project]
name = "amaranth-stubs"
version = "2024.11.14.dev0"
dependencies = [
    "amaranth == 0.5.3"
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
    "pyright == 1.1.332"
]

[tool.pyright]
include = ["amaranth-stubs", "amaranth_types"]
